// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<Fragment>
  <ForwardRef(Typography)
    component="h2"
    variant="h6"
  >
    title
  </ForwardRef(Typography)>
  <ForwardRef(Typography)
    sx={
      Object {
        "mt": 2,
      }
    }
  >
    content
  </ForwardRef(Typography)>
</Fragment>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <ForwardRef(CircularProgress) />
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests with delete button 1`] = `
<Fragment>
  <ForwardRef(Typography)
    component="h2"
    variant="h6"
  >
    title
  </ForwardRef(Typography)>
  <ForwardRef(Typography)
    sx={
      Object {
        "mt": 2,
      }
    }
  >
    content
  </ForwardRef(Typography)>
  <ForwardRef(LoadingButton)
    loading={false}
    onClick={[MockFunction]}
    variant="outlined"
  >
    削除
  </ForwardRef(LoadingButton)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with edit button 1`] = `
<Fragment>
  <ForwardRef(Typography)
    component="h2"
    variant="h6"
  >
    title
  </ForwardRef(Typography)>
  <ForwardRef(Typography)
    sx={
      Object {
        "mt": 2,
      }
    }
  >
    content
  </ForwardRef(Typography)>
  <ForwardRef(Button)
    onClick={[MockFunction]}
  >
    編集
  </ForwardRef(Button)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with loading delete button 1`] = `
<Fragment>
  <ForwardRef(Typography)
    component="h2"
    variant="h6"
  >
    title
  </ForwardRef(Typography)>
  <ForwardRef(Typography)
    sx={
      Object {
        "mt": 2,
      }
    }
  >
    content
  </ForwardRef(Typography)>
  <ForwardRef(LoadingButton)
    loading={true}
    onClick={[MockFunction]}
    variant="outlined"
  >
    削除
  </ForwardRef(LoadingButton)>
</Fragment>
`;
